[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/PL/Character_2_shoot_right.png" type="Texture" id=2]
[ext_resource path="res://sprites/PL/Character_2_cover_down.png" type="Texture" id=3]
[ext_resource path="res://Scenes/characters/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/characters/PL/Shooter.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 31 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 31 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 31 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 31 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 31 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 31, 24, 31 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 24, 31, 24, 31 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 48, 31, 24, 31 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 42, 38 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 42, 0, 42, 38 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 84, 0, 42, 38 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 38, 42, 38 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 42, 38, 42, 38 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 84, 38, 42, 38 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 76, 42, 38 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 42, 76, 42, 38 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 7.82
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Shoot",
"speed": 8.65
} ]

[sub_resource type="Animation" id=28]
resource_name = "shootLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 11.7411 ),
"update": 1,
"values": [ Vector2( -9, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Shoot", "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShootArea/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -70, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "shootRight"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 11.7411 ),
"update": 1,
"values": [ Vector2( 9, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Shoot", "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShootArea/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 70, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 59.25, 8 )

[node name="Shooter" instance=ExtResource( 4 )]
script = ExtResource( 5 )
timeDelay = 2.0

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( -9.53674e-07, 1.35525e-20 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 25 )
frame = 2
offset = Vector2( 9, -4 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 6, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/shootLeft = SubResource( 28 )
anims/shootRight = SubResource( 27 )

[node name="ShootTimer" type="Timer" parent="." index="4"]

[node name="Timer" type="Timer" parent="." index="5"]

[node name="ShootArea" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootArea" index="0"]
position = Vector2( 70, 0 )
shape = SubResource( 29 )
